<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecordRacer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">RecordRacer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_needed_to_reset_password">Enter the e-mail you would like your password sent to</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forgot_password">Password Reset</string>
    <string name="forgot_password_message">If you are registered, an e-mail has been sent to your address with instructions to reset your password.</string>
    <string name="title_activity_create_account">Create Account</string>
    <string-array name="exercise_type">
        <item>Running</item>
        <item>Biking</item>
        <item>Swimming</item>
    </string-array>

    <string-array name="spinner_playlist">

    </string-array>

    <string-array name="distance_units">
        <item>mi</item>
        <item>km</item>
    </string-array>

    <!-- Strings related to account creation -->
    <string-array name="height_unit" >
        <item>inches</item>
        <item>centimeters</item>
    </string-array>
    <string-array name="weight_unit" >
        <item>pounds</item>
        <item>kilograms</item>
    </string-array>
    <string name="title_activity_end_workout">EndWorkoutActivity</string>
</resources>
