<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center|bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sd2.recordracer.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/app_name"
                android:layout_gravity="top|center_horizontal"
                android:text="@string/app_name"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:layout_weight="30"
                android:textSize="40dp" />


            <!--Gallery
                android:layout_width="match_parent"
                android:layout_height="150dp"></Gallery-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="10">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="20">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The email/password combination is incorrect"
                android:id="@+id/password_incorrect"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff0000" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_weight="0.27"
                android:height="50dp"
                android:onClick="signIn" />

            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:layout_weight="20"
                android:onClick="register"/>

            <Button
                android:id="@+id/email_forgot_password_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:text="@string/action_forgot_password"
                android:textStyle="bold"
                android:layout_weight="10"
                android:nestedScrollingEnabled="false"
                android:clickable="false"
                android:singleLine="true"
                android:onClick="forgotPassword"
                android:longClickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Account Created"
                android:id="@+id/success"
                android:layout_gravity="center_horizontal"
                android:textColor="#1dc100" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
